--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,10 @@
         "baseUrl": ".",
         "paths": {
             "*": ["node_modules/*", "src/types/*"]
-        }
+        },
+        "strict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true
     },
     "include": ["src/**/*"]
 }
