--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "description": "",
     "main": "src/app.ts",
     "dependencies": {
+        "@types/pg": "^7.11.2",
         "body-parser": "^1.19.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "pg": "^7.12.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.1",
@@ -20,9 +22,11 @@
         "typescript": "^3.6.3"
     },
     "scripts": {
-        "start": "node --inspect=5858 -r ts-node/register ./src/app.ts",
+        "start": "node --inspect=5858 -r ts-node/register -r dotenv/config ./src/app.ts",
         "watch": "nodemon",
-        "build": "tsc"
+        "prebuild": "docker build . -t 'db'",
+        "build": "tsc",
+        "setup:database": "docker rm -f database ; docker run -d -p 35432:5432 --name database db"
     },
     "repository": {
         "type": "git",
