--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "devDependencies": {
         "@types/express": "^4.17.1",
         "@types/node": "^12.7.8",
+        "cz-conventional-changelog": "^3.0.2",
         "eslint": "^6.4.0",
         "eslint-plugin-import": "^2.18.2",
+        "husky": "^3.0.5",
         "nodemon": "^1.19.2",
         "ts-node": "^8.4.1",
         "tslint": "^5.20.0",
@@ -26,7 +28,8 @@
         "watch": "nodemon",
         "prebuild": "docker build . -t 'db'",
         "build": "tsc",
-        "setup:database": "docker rm -f database ; docker run -d -p 35432:5432 --name database db"
+        "setup:database": "docker rm -f database ; docker run -d -p 35432:5432 --name database db",
+        "lint": "tslint --project tsconfig.json --config tslint.json"
     },
     "repository": {
         "type": "git",
@@ -37,5 +40,15 @@
     "bugs": {
         "url": "https://github.com/MeetACelebrity/matcha-back/issues"
     },
-    "homepage": "https://github.com/MeetACelebrity/matcha-back#readme"
+    "homepage": "https://github.com/MeetACelebrity/matcha-back#readme",
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
+    },
+    "husky": {
+        "hooks": {
+            "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+        }
+    }
 }
