--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
     "main": "src/app.ts",
     "dependencies": {
         "@types/pg": "^7.11.2",
+        "@types/uuid": "^3.4.5",
+        "argon2": "^0.24.1",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
-        "pg": "^7.12.1"
+        "pg": "^7.12.1",
+        "uuid": "^3.3.3"
     },
     "devDependencies": {
         "@types/express": "^4.17.1",
         "@types/node": "^12.7.8",
         "cz-conventional-changelog": "^3.0.2",
+        "dotenv": "^8.1.0",
         "eslint": "^6.4.0",
         "eslint-plugin-import": "^2.18.2",
         "husky": "^3.0.5",
@@ -25,11 +29,11 @@
     },
     "scripts": {
         "start": "node --inspect=5858 -r ts-node/register -r dotenv/config ./src/app.ts",
-        "watch": "nodemon",
+        "watch": "nodemon 'src/**/*.ts'",
         "prebuild": "docker build . -t 'db'",
         "build": "tsc",
         "setup:database": "docker rm -f database ; docker run -d -p 35432:5432 --name database db",
-        "lint": "tslint --project tsconfig.json --config tslint.json"
+        "lint": "tslint --project tsconfig.json --config tslint.json 'src/**/*.ts'"
     },
     "repository": {
         "type": "git",
