--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,13 @@
 {
     "compilerOptions": {
+        "target": "esnext",
         "module": "commonjs",
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "target": "es6",
-        "noImplicitAny": true,
         "moduleResolution": "node",
-        "sourceMap": true,
+        "declaration": true,
         "outDir": "dist",
-        "baseUrl": ".",
-        "paths": {
-            "*": ["node_modules/*", "src/types/*"]
-        },
         "strict": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true
+        "esModuleInterop": true,
+        "resolveJsonModule": true
     },
-    "include": ["src/**/*"]
+    "include": ["src"]
 }
