--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
     "description": "",
     "main": "src/app.ts",
     "dependencies": {
+        "@types/express-session": "^1.15.14",
         "@types/pg": "^7.11.2",
         "@types/uuid": "^3.4.5",
         "argon2": "^0.24.1",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "express-session": "^1.16.2",
         "pg": "^7.12.1",
         "uuid": "^3.3.3"
     },
