--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
         "typescript": "^3.6.3"
     },
     "scripts": {
-        "start": "node --inspect=5858 -r ts-node/register -r dotenv/config ./src/app.ts",
-        "watch": "nodemon 'src/**/*.ts'",
+        "start": "node -r ts-node/register -r dotenv/config ./src/app.ts",
+        "watch": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/app.ts",
         "prebuild": "docker build . -t 'db'",
         "build": "tsc",
         "setup:database": "docker rm -f database ; docker run -d -p 35432:5432 --name database db",
