--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-session": "^1.16.2",
+        "heml": "^1.1.3",
+        "nodemailer": "^6.3.0",
         "pg": "^7.12.1",
         "uuid": "^3.3.3"
     },
     "devDependencies": {
         "@types/express": "^4.17.1",
         "@types/node": "^12.7.8",
+        "@types/nodemailer": "^6.2.1",
         "cz-conventional-changelog": "^3.0.2",
         "dotenv": "^8.1.0",
         "eslint": "^6.4.0",
