feat(containerization): db and cloud are now containerized and Cloud setup buckets automaticly:tada:
This docker-compose is totally 'movable', it use env var who are stored in our '.env' file.

For the moment this dockercompose use the folowing env var:

DATABASE:

        - DATABASE_PORT --> it's this port who will be exposed during the
composing; and it's him that we'll use for node and psql connection

CLOUD:
        - CLOUD_HOST: this is the address of our minio container, more
precisely, it's the ip of our docker machine (docker machine ip <machine_name>)

        - CLOUD_PORT: this is the exposed port of our mino container
(same working of DATABASE_PORT)

        - MINIO_ACCESS_KEY: this is the public key of our minio cloud  that we can defined
here

        - MINIO_SECRET_KEY: this is the secret key of our minio cloud
that we can defined here

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     cloud:
         image: minio/minio
         ports:
-            - '${CLOUD_PORT}:${CLOUD_PORT}'
+            - '${CLOUD_PORT}:9000'
         env_file:
             - .env
         command: server /data
