--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "src/app.ts",
     "dependencies": {
         "@types/cors": "^2.8.6",
+        "@types/express-fileupload": "^1.1.0",
         "@types/express-session": "^1.15.14",
         "@types/pg": "^7.11.2",
         "@types/uuid": "^3.4.5",
@@ -12,7 +13,9 @@
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "express-fileupload": "^1.1.6-alpha.5",
         "express-session": "^1.16.2",
+        "file-type": "^12.3.0",
         "heml": "^1.1.3",
         "minio": "^7.0.12",
         "nodemailer": "^6.3.0",
