--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@types/cors": "^2.8.6",
         "@types/express-fileupload": "^1.1.0",
         "@types/express-session": "^1.15.14",
+        "@types/got": "^9.6.8",
         "@types/pg": "^7.11.2",
         "@types/uuid": "^3.4.5",
         "argon2": "^0.25.0",
@@ -17,6 +18,7 @@
         "express-fileupload": "^1.1.6-alpha.5",
         "express-session": "^1.16.2",
         "file-type": "^12.3.0",
+        "got": "^9.6.0",
         "heml": "^1.1.3",
         "minio": "^7.0.12",
         "nodemailer": "^6.3.0",
