--- a/package.json
+++ b/package.json
@@ -6,41 +6,41 @@
     "dependencies": {
         "@types/cors": "^2.8.6",
         "@types/express-fileupload": "^1.1.0",
-        "@types/express-session": "^1.15.14",
-        "@types/got": "^9.6.8",
+        "@types/express-session": "^1.15.16",
+        "@types/got": "^9.6.9",
         "@types/pg": "^7.11.2",
-        "@types/uuid": "^3.4.5",
+        "@types/uuid": "^3.4.6",
         "argon2": "^0.25.1",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
-        "date-fns": "^2.6.0",
+        "date-fns": "^2.8.1",
         "express": "^4.17.1",
-        "express-fileupload": "^1.1.6-alpha.5",
-        "express-session": "^1.16.2",
-        "file-type": "^12.3.0",
+        "express-fileupload": "^1.1.6",
+        "express-session": "^1.17.0",
+        "file-type": "^12.4.0",
         "got": "^9.6.0",
         "heml": "^1.1.3",
         "minio": "^7.0.12",
-        "nodemailer": "^6.3.0",
-        "pg": "^7.12.1",
+        "nodemailer": "^6.3.1",
+        "pg": "^7.14.0",
         "uuid": "^3.3.3"
     },
     "devDependencies": {
-        "@types/express": "^4.17.1",
-        "@types/minio": "^7.0.3",
-        "@types/node": "^12.7.11",
-        "@types/nodemailer": "^6.2.1",
+        "@types/express": "^4.17.2",
+        "@types/minio": "^7.0.4",
+        "@types/node": "^12.12.12",
+        "@types/nodemailer": "^6.2.2",
         "cz-conventional-changelog": "^3.0.2",
-        "dotenv": "^8.1.0",
-        "eslint": "^6.5.1",
+        "dotenv": "^8.2.0",
+        "eslint": "^6.7.1",
         "eslint-plugin-import": "^2.18.2",
-        "husky": "^3.0.8",
-        "nodemon": "^1.19.3",
-        "ts-node": "^8.4.1",
-        "tslint": "^5.20.0",
+        "husky": "^3.1.0",
+        "nodemon": "^2.0.1",
+        "ts-node": "^8.5.2",
+        "tslint": "^5.20.1",
         "tslint-config-airbnb": "^5.11.2",
         "tslint-config-prettier": "^1.18.0",
-        "typescript": "^3.6.3"
+        "typescript": "^3.7.2"
     },
     "scripts": {
         "start": "node -r ts-node/register -r dotenv/config ./src/app.ts",
