--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@types/cors": "^2.8.6",
         "@types/express-fileupload": "^1.1.0",
         "@types/express-session": "^1.15.16",
+        "@types/faker": "^4.1.8",
         "@types/got": "^9.6.9",
         "@types/pg": "^7.11.2",
         "@types/uuid": "^3.4.6",
@@ -18,6 +19,7 @@
         "express": "^4.17.1",
         "express-fileupload": "^1.1.6",
         "express-session": "^1.17.0",
+        "faker": "^4.1.0",
         "file-type": "^12.4.0",
         "got": "^9.6.0",
         "heml": "^1.1.3",
