--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "file-type": "^12.4.0",
         "got": "^9.6.0",
         "heml": "^1.1.3",
+        "memorystore": "^1.6.1",
         "minio": "^7.0.12",
         "nodemailer": "^6.3.1",
         "pg": "^7.14.0",
@@ -48,7 +49,7 @@
     },
     "scripts": {
         "start": "npm run watch",
-        "watch": "nodemon --watch src --exec 'ts-node -r dotenv/config' src/app.ts",
+        "watch": "nodemon --watch 'src/**/*.ts' --exec 'ts-node -r dotenv/config --files src/app.ts'",
         "prebuild": "docker build . -t 'db'",
         "build": "tsc",
         "setup:database": "docker rm -f database ; docker run -d -p 35432:5432 --name database db",
