fix: don't verify provided credentials

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: '3.3'
 services:
     database:
         build:
@@ -34,7 +34,7 @@ services:
                 done;
                 echo Connected!;
                 sleep 4;
-                /usr/bin/mc config host add cloud http://${CLOUD_HOST}:${CLOUD_PORT} ${MINIO_ACCESS_KEY} ${MINIO_SECRET_KEY};
+                /usr/bin/mc config host add cloud http://${CLOUD_HOST}:${CLOUD_PORT} ${MINIO_ACCESS_KEY} ${MINIO_SECRET_KEY} --api s3v4;
                 /usr/bin/mc mb cloud/profile-pics;
                 /usr/bin/mc policy set public cloud/profile-pics;
                 /usr/bin/mc cp /tmp/1.jpg cloud/profile-pics;
